--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,24 @@
       crossorigin="anonymous"
     />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.3/socket.io.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
+    <!-- Include CodeMirror CSS  -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.css"
+    />
+    <!-- Include CodeMirror JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/codemirror.min.js"></script>
+    <!-- Include JavaScript mode for CodeMirror -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/mode/javascript/javascript.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.62.0/theme/blackboard.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="../static/custom.css" />
   </head>
   <body>
@@ -38,11 +56,17 @@
               <label for="select-device-options" class="form-label"
                 >Your Devices</label
               >
-              <p>
-                Mobile OS: {{ connected_device.mobile_os }}<br />
-                Device: {{ connected_device.model }}<br />
-                UDID: {{connected_device.UDID }}
-              </p>
+              <div class="row align-items-center">
+                <p class="col-auto mt-0">
+                  Device: {{ connected_device.mobile_os }} {{
+                  connected_device.model }} {%
+                    if connected_device.mobile_os == "Android" 
+                    %} <i class="android bi bi-android2"></i> {% else %} <i class="ios bi bi-apple"></i> {% endif %}
+                  </p>
+                  <p class="col-auto">
+                  UDID: {{connected_device.UDID }}
+                </p>
+              </div>
               <!-- <div class=" mb-3">
             <div class="form-check form-check-inline">
               <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="android">
@@ -55,33 +79,43 @@
           </div> -->
               <div class="mb-3">
                 <label for="search-packages" class="form-label"
-                  >Select Package</label
-                >
-                <input
-                  name="search-packages"
-                  type="text"
-                  class="form-control"
-                  id="searchInput"
-                  oninput="filterOptions()"
-                  placeholder="Search for package . . ."
-                />
+                  >Select Package</i
+                ></label>
+                <div class="row mb-2">
+                  <div class="col-4 ">
+
+                    <input
+                    name="search-packages"
+                    type="text"
+                    class="form-control"
+                    id="searchInput"
+                    oninput="filterOptions()"
+                    placeholder="Search ..."
+                    />
+                  </div>
+                  <div class="col-8 ">
+                    <select
+                    name="package"
+                    id="packageSelect"
+                    class="form-control"
+                    required
+                    >
+                      <option>------ Select Your Package ------</option>
+                      {% if identifiers %} {% for identifier in identifiers %}
+                      <option value="{{ identifier.split()[2] }}">
+                        {{ identifier }}
+                      </option>
+                      {% endfor %} {% else %}
+                      <option disabled>
+                        No packages detected. Connect your USB device and run
+                        Frida.
+                      </option>
+                      {% endif %}
+                    </select>
+                  </div>
+                </div>
               </div>
-              <select
-                name="package"
-                id="packageSelect"
-                class="form-control mt-2"
-                required
-              >
-                {% if identifiers %} {% for identifier in identifiers %}
-                <option value="{{ identifier.split()[2] }}">
-                  {{ identifier }}
-                </option>
-                {% endfor %} {% else %}
-                <option disabled>
-                  No packages detected. Connect your USB device and run Frida.
-                </option>
-                {% endif %}
-              </select>
+
               <div class="mt-3">
                 <label for="selected_script" class="form-label"
                   >Select Bypass Script</label
@@ -92,7 +126,7 @@
                   class="form-select"
                   aria-label="Default select example"
                 >
-                {% if connected_device.mobile_os == 'Android' %}
+                  {% if connected_device.mobile_os == 'Android' %}
                   <optgroup
                     label="Your Android Script"
                     data-directory="Script Directory 1"
@@ -103,7 +137,7 @@
                     </option>
                     {% endfor %}
                   </optgroup>
-                {% else %}
+                  {% else %}
                   <optgroup
                     label="Your iOS Script"
                     data-directory="Script Directory 2"
@@ -114,7 +148,7 @@
                     </option>
                     {% endfor %}
                   </optgroup>
-                {% endif %}
+                  {% endif %}
                 </select>
               </div>
               <div class="mt-3">
@@ -122,10 +156,10 @@
                   >Script Content</label
                 >
                 <textarea
-                  class="form-control"
+                  class="form-control CodeMirror blackboard"
                   name="script_content"
                   id="scriptContent"
-                  rows="6"
+                  rows="4"
                   placeholder="Script Content"
                 ></textarea>
               </div>
@@ -225,7 +259,18 @@
     <div class="wave"></div>
     <div class="wave"></div>
     <div class="wave"></div>
+    <script>
+      var editor = CodeMirror.fromTextArea(
+        document.getElementById("scriptContent"),
+        {
+          lineNumbers: true,
+          mode: "javascript",
+          theme: "blackboard", // Specify the theme as "blackboard"
+        }
+      );
+    </script>
     <script src="../static/custom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.25.0/components/prism-javascript.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
