fix bug emulator no detect and update version 1.3

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,12 +38,18 @@
           <form action="/run-frida">
             <label for="select-device-options" class="form-label">Your Devices</label>
             {% if connected_device %}
-                {% for device in connected_device %}
-                    <p>Device: {{ device.model }}</p>
-                {% endfor %}
-            {% else %}
-                <p>No device connected</p>
-            {% endif %}
+              {% for device in connected_device %}
+                  {% if "android" in device.model | lower %}
+        
+                      <p>Android Device: {{ device.model }}<br> Serial Number: {{ device.serial_number }}</p>
+                  {% else %}
+                      
+                      <p>Device: {{ device.model }}<br> UDID: {{ device.UDID }}</p>
+                  {% endif %}
+              {% endfor %}
+          {% else %}
+              <p>No device connected</p>
+          {% endif %}
           <!-- <div class=" mb-3">
             <div class="form-check form-check-inline">
               <input name="select-device-options" class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="android">
